test/tests/WrongGenericArgumentType.expected
WrongGenericArgumentType.panda:4:18: error: generic argument 'anonymous.WrongGenericArgumentType.T' must be of type 'panda.core.Value', but found 'panda.core.Object'
1 error
