test/tests/WrongGenericArgumentType.panda
class WrongGenericArgumentType<T:Value> {
    @class
    method main() {
        def w := WrongGenericArgumentType<Object>()
    }
}